--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,9 +10,14 @@
   max-width: 600px;
 }
 
-.disclaimer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.lh0 {
+  line-height: 0;
+}
+
+.pos-relative {
+  position: relative;
+}
+
+*, *:before, *:after {
+    box-sizing: border-box;
 }
